Added some entries to dict_en.properties
git-svn-id: https://cqst.svn.cloudforge.com/whatif/trunk@94 69397c0b-356f-4d35-a2df-60609b7992a0

--- a/src/se/cqst/whatif/resources/dict_en.properties
+++ b/src/se/cqst/whatif/resources/dict_en.properties
@@ -1,11 +1,15 @@
 !	THIS IS A COMMENT	!
 
 TXT_HELP_CONTENT		=	Valid commands are:\n\
-					\tgo [direction]\t\tGo in the specified direction\n\
-					\tlook (at) [object]\t\tLook at a specifix objext\n\
-					\thelp [opt. command]\t\tGet help about the command
+							\tgo [direction]\t\tGo in the specified direction\n\
+							\tlook (at) [object]\t\tLook at a specifix objext\n\
+							\thelp [opt. command]\t\tGet help about the command
 TXT_HELP_LOOK			=	look (at) [Object] - Display information about a \
-					specific object.
+							specific object.
 TXT_HELP_HELP			=	help [opt. command] - Show this help.
-TXT_HELP_GO			=	go [direction] - Walk in the specified direction.
+TXT_HELP_GO				=	go [direction] - Walk in the specified direction.
 TXT_HELP_EXIT			=	exit - exit application.
+!	GO_INVALID_DIR, use %s for list of valid input	!
+GO_INVALID_DIR_1		=	That was an unusual direction. Perhaps you should try a more well-known one instead?\n  (%s)
+GO_INVALID_DIR_2		=	I choose to disobey you; mostly because I don't understand you.\n  (%s)
+GO_INVALID_DIR_3		=	You have entered an unknown direction. Try a known direction instead.\n  (%s)
