Updated game environment
git-svn-id: https://cqst.svn.cloudforge.com/whatif/trunk@146 69397c0b-356f-4d35-a2df-60609b7992a0

--- a/src/se/cqst/whatif/resources/dict_en.properties
+++ b/src/se/cqst/whatif/resources/dict_en.properties
@@ -9,6 +9,8 @@ TXT_HELP_LOOK			=	look (at) [Object] - Display information about a \
 TXT_HELP_HELP			=	help [opt. command] - Show this help.
 TXT_HELP_GO				=	go [direction] - Walk in the specified direction.
 TXT_HELP_EXIT			=	exit - exit application.
+TXT_HELP_TAKE			=	take [object] (in/on/at/from [container]) - Take an object from a container.
+TXT_HELP_PUT			=	put [object] (in/on/at/from [container]) - Put an object into a container.
 !	GO_INVALID_DIR, use %s for list of valid input	!
 GO_INVALID_DIR_1		=	That was an unusual direction. Perhaps you should try a more well-known one instead?\n  (%s)
 GO_INVALID_DIR_2		=	I choose to disobey you; mostly because I don't understand you.\n  (%s)
